# examples

./: .gitignore
_template-folder/: README.md  make-copy.py
_template-folder/scripts/: README.md  convert-with-core.py  download-data.py
core/: download.py
functions/: data_download.py
male-seed-beetle/: pyproject.toml
male-seed-beetle/male_seed_beetle/: download-data.py  package.py
male-seed-beetle/scripts/: download-data.py
rhesus-monkeys/scripts/: README.md  convert-meta.py  convert-samples.py  convert-with-core.py  download-data.py
seed-bank-dynamics/scripts/: README.md  convert-with-core.py  download-data.py
